# gtkwave

./: CMakeLists.txt
gtkwave3/: CMakeLists.txt
gtkwave3-gtk3/: CMakeLists.txt
